# Academic_Token

./: .wallet_config  CONTRACTS_INTEGRATION.md  INTEGRATION_SUMMARY.md  Makefile  build.sh  check_build.sh  clean_setup.sh  config.yml  contract_update.json  contracts_config.sh  contracts_integration.json  deployment_results.txt  direct_update.json  generate_student_proto.sh  go.mod  go.sum  readme.md  run-rest-server.sh  setup_contract_integration.sh  setup_test.sh  setup_test_fixed.sh  simple_proposal.json  student_contract_proposal.json  test-connection.sh  test_compile.go.bak  test_contract_integration.sh  test_student_compile.go  test_student_contract_integration.sh  test_student_flow.sh  test_tokendef_fix.sh  update_params_tx.json  update_student_params.json
academic-token-frontend/: CORREÇÕES.md  OFF_CHAIN_INTEGRATION.md  README.md  README_BLOCKCHAIN.md  TROUBLESHOOTING.md  cleanup.sh  package-lock.json  package.json  restart-dev.sh  start.sh  test-api-simple.sh  test-api.sh
academic-token-frontend/app/: globals.css  layout.tsx  (+1 more)
app/: app.go  app_config.go  sim_bench_test.go  sim_test.go
contracts/academic_nft/: Cargo.toml
contracts/academic_nft/artifacts/: academic_nft_opt.wasm
contracts/academic_nft/docs/: README.md
contracts/academic_nft/src/: contract.rs  error.rs  execute.rs  ipfs.rs  lib.rs  msg.rs  query.rs  state.rs  tests.rs
contracts/degree/: Cargo.toml  degree_contract_info.txt  deploy_degree.sh  est_degree_contract.sh  full_test.sh  remaining_tests.sh  simple_deploy.sh
contracts/degree/artifacts/: degree.wasm  degree_opt.wasm
contracts/degree/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/equivalence/: Cargo.toml  temp_query_section.txt
contracts/equivalence/artifacts/: checksums.txt  equivalence.wasm  equivalence_opt.wasm
contracts/equivalence/scripts/: ipfs_real_fetcher.sh  test_ipfs.sh
contracts/equivalence/src/: contract.rs  error.rs  execute.rs  ipfs.rs  lib.rs  msg.rs  query.rs  query.rs.backup  state.rs
proto/: buf.gen.pulsar.yaml
scripts/: README.md  auto_deploy.sh  build_optimized.sh  deploy_all.sh  deploy_single.sh  deploy_with_address.sh  simple_deploy.sh
tools/: syllabus_data_script.sh  university_test_script.sh
(+743 files in other folders)
