[package]
name = "academic-nft"
version = "0.1.0"
authors = ["Academic Token Team"]
edition = "2021"
description = "NFT contract for Academic Token system - handles subject completion and degree NFTs"
license = "Apache-2.0"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw721 = "0.16.0"
cw721-base = "0.16.0"
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
sha2 = "0.10.2"
hex = "0.4.3"

[dev-dependencies]
cw-multi-test = "0.16.2"
cosmwasm-vm = "1.1.3"
