[package]
name = "degree"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.5"
cosmwasm-std = "1.5"
cw-storage-plus = "1.2"
cw2 = "1.1"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
cosmwasm-vm = "1.5"
cw-multi-test = "0.20"