[package]
name = "equivalence"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# Backtraces são opcionais
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = "1.5.7"
cosmwasm-std = "1.5.7"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
schemars = "0.8.21"
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0"  # ⚠️ OBRIGATÓRIO: versão correta
thiserror = "1.0.63"

[dev-dependencies]
cw-multi-test = "0.20.1"
